[package]
name = "carbon-oxyde"
version = "0.1.0"
authors = ["Raphael Bizos <r.bizos@criteo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = ["full"] }
async-trait = "0.1.42"